# tex

./: config.json.example  pyproject.toml  tex.py
