[tool.poetry]
name = "tex"
version = "0.1.0"
description = "Monitor texas apartment prices"
authors = ["Zachary Weeden <zdw7287@rit.edu>"]

[tool.poetry.dependencies]
python = ">=3.6"
selenium = "^3.141.0"
requests = "^2.24.0"
black = "^20.8b1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
